[package]
name = "everybody_loops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
fs-err = "2.7.0"
prettyplease = "0.1.9"
syn = { version = "1.0.91", features = ["full", "visit-mut"] }
